Unreleased changes

NEW FEATURES

   o Supports the OP-WORKFLOW-CAGEscan-short-reads-v2.1 pipeline.

OTHER CHANGES

   o hanabi() accepts a single vector as input.
   o hanabiPlot() will coerce GROUP in a factor instead of making an error.
   o TPM() checks that no expression value is negative.
   o The smallCAGEqc Rmarkdown template now uses hanabi() everywhere.

Changes in version 0.12.3

NEW FEATURES

   o Depends on the magrittr package.

BUG FIXES

   o loadMoiraiStats: Better handle the case of 96-sample runs.

Changes in version 0.12.2

NEW FEATURES

    o Added a "steps" scope in mapStats().
    o loadMoiraiStats creates a "cleaned" column when possible.

OTHER CHANGES

    o Reworded category names in the "qc" scope in mapStats().

Changes in version 0.12.1

NEW FEATURES

    o Added a "C1 CAGE" type to llPostProcess().

BUG FIXES

    o Properly import gdata::drop.levels() and vegan::rarefy().

OTHER CHANGES

    o Reduced output width to 100 in the Rmarkdown template.

Changes in version 0.12.0

NEW FEATURES

    o   Added the loadBED12 function to load CAGEscan fragment data,
        especially from multiple libraries processed separately.
    o   Added the erccSpikeConcentration function to retreive concentration
        of RNA spikes sold by Thermo Fisher.
    o   Added the plate96 function to generate coordinate ranges in 96-well
        plate format.
    o   Added a "group" option for the function fldgmConcentrationPlot.
    o   New "hanabi" objects to ease the production of hanabi plots.

BUG FIXES

    o   countSymbols now handles cases where zero symbols are detected
        in a sample.

OTHER CHANGES

    o   After adding a "unmapped" category, the "qc" type in plotAnnot()
        now totals to 100 %.
    o   TPM() now warns if it will produce NaN values.
    o   In the template, merged `LIBRARY` and `RUN_ID`, used for same purpose.
    o   edgeR is only "Suggested": plotSlimSmear aborts if absent.